debugging- fixed alignment on navbar, footer section, and the card backgrounds clipping out

--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -95,6 +95,7 @@
 .cards-item_info {
   padding: 20px 30px 30px;
   background-color: #242424;
+  height: 100%;
 }
 
 .cards-item_info-text {
