--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,7 +4,7 @@
 
 .footer-container {
   background-color: var(--color-primary);
-  padding: 4rem 0 2rem 0;
+  padding: 2rem 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,6 +30,13 @@
   font-size: 20px;
 }
 
+.input-areas {
+  margin-top: 10px;
+  height: fit-content;
+  align-self: flex-start;
+  transform: translateX(40px);
+}
+
 .footer-input {
   padding: 8px 20px;
   border-radius: 20px;
@@ -41,7 +48,8 @@
 }
 
 .footer-link {
-  width: 100%;
+  width: 620px;
+
   max-width: 1000px;
   display: flex;
   justify-content: center;
@@ -50,7 +58,8 @@
 
 .footer-link_wrapper {
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-link_item {
