--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -111,7 +111,6 @@
   }
 
   .nav-item {
-    height: auto;
     width: 100%;
   }
 
